--- a/style.css
+++ b/style.css
@@ -6,17 +6,11 @@
 
 body, html {
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, sans-serif;
+    width: 100%;
+    display: block;
+    margin: 0;
+}
+
+body {
     background-color: #fff;
-}
-
-.container {
-    text-align: center;
-}
-
-h1 {
-    color: #333;
 }
